--- a/chapter5_exercise.css
+++ b/chapter5_exercise.css
@@ -1,1 +1,115 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+.heading{
+  width: 100%;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.nav-list{
+  width: 100%;
+  text-align: center;
+  border-top: 2px solid gray;
+  border-bottom: 2px solid gray;
+}
+
+.nav-list-item{
+  list-style: none;
+  display: inline-block;
+  margin: 15px 20px;
+}
+
+.box-list{
+  width: 800px;
+  height: 600px;
+  margin:50px auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box1{
+  width: 200px;
+  height: 200px;
+  background-color: #e6ffe9;
+}
+
+.box2{
+  width: 200px;
+  height: 200px;
+  background-color: #cbffd3;
+}
+
+.box3 {
+  width: 200px;
+  height: 200px;
+  background-color: #aeffdb;
+}
+
+.box4 {
+  width: 200px;
+  height: 200px;
+  background-color: #93ffab;
+}
+
+.box5 {
+  width: 200px;
+  height: 200px;
+  background-color: #f3ffd8;
+}
+
+.box6 {
+  width: 200px;
+  height: 200px;
+  background-color: #edffbe;
+}
+
+.box7 {
+  width: 200px;
+  height: 200px;
+  background-color: #e9ffa5;
+}
+
+.box8 {
+  width: 200px;
+  height: 200px;
+  background-color: #e4ff8d;
+}
+
+.box9 {
+  width: 200px;
+  height: 200px;
+  background-color: #d9e5ff;
+}
+
+.box10 {
+  width: 200px;
+  height: 200px;
+  background-color: #bad3ff;
+}
+
+.box11 {
+  width: 200px;
+  height: 200px;
+  background-color: #a4c6ff;
+}
+
+.box12 {
+  width: 200px;
+  height: 200px;
+  background-color: #8eb8ff;
+}
+
+footer{
+  width: 100%;
+  height: 120px;
+  background-color: gray;
+}
+.footer-text{
+  color: #ffffff;
+  text-align: center;
+  line-height: 120px;
+}
