--- a/chapter5_exercise.css
+++ b/chapter5_exercise.css
@@ -4,29 +4,29 @@
   box-sizing: border-box;
 }
 
-.heading{
+header{
   width: 100%;
-  margin: 20px auto;
+  padding: 20px 0;
   text-align: center;
 }
 
 .nav-list{
-  width: 100%;
   text-align: center;
-  border-top: 2px solid gray;
-  border-bottom: 2px solid gray;
+  padding: 15px 0;
+  margin: 0 auto;
+  border-bottom: 1px solid #848282;
+  border-top: 1px solid #848282;
 }
 
 .nav-list-item{
   list-style: none;
   display: inline-block;
-  margin: 15px 20px;
+  margin: 0 20px;
 }
 
-.box-list{
+.main{
   width: 800px;
-  height: 600px;
-  margin:50px auto;
+  margin: 50px auto;
   display: flex;
   flex-wrap: wrap;
 }
@@ -106,10 +106,12 @@
 footer{
   width: 100%;
   height: 120px;
-  background-color: gray;
-}
-.footer-text{
-  color: #ffffff;
   text-align: center;
   line-height: 120px;
+  background-color: #848282;
 }
+
+.footer-text{
+  color: #fff;
+}
+
